--- a/Web/templates/index.html
+++ b/Web/templates/index.html
@@ -33,7 +33,7 @@
     </div>
     <script src="static/js/jquery-1.11.3.min.js"></script>
     <script src="static/js/bokeh-0.11.0.min.js"></script>
-    <script src="static/js/Griidle_Officiel.js"></script>
+    <!-- <script src="static/js/Griddle_Officiel.js"></script> -->
     <script src="static/js/main.js"></script>
   </body>
 </html>
